--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         </div>
         <video id="video" width="800" src="./asset/pexels-mart-production-9559147-2160x4096-25fps.mp4" autoplay muted loop></video>
         <canvas id="output-canvas" width="800" height="1000"></canvas>
+
+        <input type="file" accept="image/jpeg, image/png, image/jpg">
     </section>
 </body>
 </html>
